@@ -1,0 +1,62 @@
+name: linux
+
+on:
+  push:
+    branches:
+      - '*'
+    tags-ignore:
+      - '*'
+  pull_request:
+
+jobs:
+  perl:
+
+    runs-on: ubuntu-latest
+
+    env:
+       PERL_USE_UNSAFE_INC: 0
+       AUTHOR_TESTING: 1
+       AUTOMATED_TESTING: 1
+       RELEASE_TESTING: 1
+       PERL_CARTON_PATH: $GITHUB_WORKSPACE/local
+
+    strategy:
+      fail-fast: false
+      matrix:
+        perl-version:
+          - '5.30'
+          - '5.28'
+          - '5.26'
+          - '5.24'
+          - '5.22'
+          - '5.20'
+          - '5.18'
+          - '5.16'
+          - '5.14'
+          - '5.12'
+          - '5.10'
+        remove-libuuid: [0]
+        include:
+          - perl-version: '5.30'
+            remove-libuuid: 1
+
+    container:
+      image: perldocker/perl-tester:${{ matrix.perl-version }}
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: perl -V
+        run: perl -V
+      - name: Environment
+        run: env | sort
+      - name: Conditionally Remove libuuid
+        if: ${{ matrix.remove-libuuid == 1 }}
+        run: dpkg -r --force-all libuuid1 uuid-dev
+      - name: Install Dependencies
+        run: cpm install -g --show-build-log-on-failure --with-all --cpanfile cpanfile
+      - name: Configure Project
+        run: perl Makefile.PL
+      - name: Build Project
+        run: make
+      - name: Run Tests
+        run: make test
