@@ -6,7 +6,7 @@
 /blib/
 /cover_db
 /inc/
-/local
+/local*
 /Makefile
 /Makefile.old
 /MANIFEST$
@@ -15,3 +15,6 @@
 /MYMETA*
 /pm_to_blib
 /_alien
+/.build/
+/Alien-KentSrc-*/
+/cpanfile.snapshot
