@@ -1,25 +1,95 @@
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.014.
 use strict;
 use warnings;
+
+use 5.008009;
+
 use ExtUtils::MakeMaker;
-use Alien::Build::MM;
 
-my $abmm = Alien::Build::MM->new;
-
-WriteMakefile($abmm->mm_args(
-  ABSTRACT_FROM => 'lib/Alien/KentSrc.pm',
-  DISTNAME      => 'Alien-KentSrc',
-  NAME          => 'Alien::KentSrc',
-  VERSION_FROM  => 'lib/Alien/KentSrc.pm',
-  MIN_PERL_VERSION => '5.008009',
-  META_MERGE => {
-    resources => {
-      bugtracker => 'https://github.com/kiwiroy/alien-kentsrc/issues',
-      homepage => 'https://github.com/kiwiroy/alien-kentsrc',
-      repository => 'https://github.com/kiwiroy/alien-kentsrc.git',
-    },
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "Fetch/build/stash Kent src from http://hgdownload.cse.ucsc.edu/admin/",
+  "AUTHOR" => "Roy Storey <kiwiroy\@cpan.org>",
+  "BUILD_REQUIRES" => {
+    "Alien::Build" => "0.32",
+    "Alien::Build::MM" => "0.32",
+    "ExtUtils::MakeMaker" => "6.52"
   },
-));
+  "CONFIGURE_REQUIRES" => {
+    "Alien::Build" => "1.19",
+    "Alien::Build::MM" => "0.32",
+    "ExtUtils::MakeMaker" => "6.52"
+  },
+  "DISTNAME" => "Alien-KentSrc",
+  "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.008009",
+  "NAME" => "Alien::KentSrc",
+  "PREREQ_PM" => {
+    "Alien::Base" => "2.12",
+    "Alien::libuuid" => "0.02",
+    "Archive::Zip" => 0,
+    "HTML::LinkExtor" => 0,
+    "HTTP::Tiny" => "0.044",
+    "Sort::Versions" => 0,
+    "URI" => 0
+  },
+  "TEST_REQUIRES" => {
+    "ExtUtils::MakeMaker" => "6.52",
+    "File::Spec" => 0,
+    "Test::More" => 0
+  },
+  "VERSION" => "0.5",
+  "test" => {
+    "TESTS" => "t/*.t"
+  }
+);
 
-sub MY::postamble {
-  $abmm->mm_postamble;
+
+my %FallbackPrereqs = (
+  "Alien::Base" => "2.12",
+  "Alien::Build" => "0.32",
+  "Alien::Build::MM" => "0.32",
+  "Alien::libuuid" => "0.02",
+  "Archive::Zip" => 0,
+  "ExtUtils::MakeMaker" => "6.52",
+  "File::Spec" => 0,
+  "HTML::LinkExtor" => 0,
+  "HTTP::Tiny" => "0.044",
+  "Sort::Versions" => 0,
+  "Test::More" => 0,
+  "URI" => 0
+);
+
+
+# BEGIN code inserted by Dist::Zilla::Plugin::AlienBuild
+use Alien::Build::MM;
+my $abmm = Alien::Build::MM->new;
+%WriteMakefileArgs = $abmm->mm_args(%WriteMakefileArgs);
+# END code inserted by Dist::Zilla::Plugin::AlienBuild
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+  delete $WriteMakefileArgs{TEST_REQUIRES};
+  delete $WriteMakefileArgs{BUILD_REQUIRES};
+  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
 }
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
+
+
+# BEGIN code inserted by Dist::Zilla::Plugin::AlienBuild
+{ package
+    MY;
+  sub postamble {
+    $abmm->mm_postamble(@_);
+  }
+  sub install {
+    $abmm->can('mm_install')
+      ? $abmm->mm_install(@_)
+      : shift->SUPER::install(@_);
+  }
+}
+# END code inserted by Dist::Zilla::Plugin::AlienBuild
+
