@@ -3,62 +3,79 @@ use strict;
 use warnings;
 use alienfile;
 use File::Spec::Functions qw{catfile};
+use POSIX ();
 
-probe [ 'env | grep -q ^KENT_SRC=' ];
-probe [ 'env | grep -q ^MACHTYPE=' ];
+probe ['env | grep -q ^KENT_SRC='];
+probe ['env | grep -q ^MACHTYPE='];
 
 share {
 
   requires 'Archive::Zip';
+  requires 'Alien::libuuid';
+  requires 'Sort::Versions';
+  requires 'URI';
 
   start_url 'http://hgdownload.cse.ucsc.edu/admin/';
 
-  plugin Download => (
-      filter => qr/\.zip$/,
-  		version => qr/v(\d+)\.zip$/,
-  );
+  plugin Download => (filter => qr/\.zip$/, version => qr/v(\d+)\.zip$/,);
 
-  plugin 'Extract' => ( format => 'zip' );
+  plugin 'Extract' => (format => 'zip');
 
   meta->before_hook(
     build => sub {
       my ($build) = @_;
-      chomp(my $type = `uname -m`);
-      $build->runtime_prop->{kent_machtype} = $type;
+      my ($type)  = $build->runtime_prop->{kent_machtype} = (POSIX::uname)[4];
+      if (Alien::libuuid->install_type('share')) {
+        $build->install_prop->{uuid_cflags} = Alien::libuuid->cflags;
+        $build->install_prop->{uuid_cflags} =~ s{/uuid\b}{};
+        log("Alien::libuuid share install:");
+        log("\tcflags (modified) = " . $build->install_prop->{uuid_cflags});
+      }
+      else {
+        log("Alien::libuuid system install");
+        $build->install_prop->{uuid_cflags} = '';
+      }
       log("set MACHTYPE to $type");
     }
   );
 
   build [
     ## make jkweb.a
-    [ '%{make} -C src/lib CC=%{perl.config.cc} CFLAGS="-fPIC -g -Wall -O2"' ],
+    [
+      '%{make} -C src/lib CC=%{perl.config.cc} CFLAGS="-fPIC -g -Wall -O2 %{.install.uuid_cflags}"'
+    ],
     ## make htslib.a
-    [ '%{make} -C src/htslib CC=%{perl.config.cc} CFLAGS="-fPIC -g -Wall -O2"' ],
+    ['%{make} -C src/htslib CC=%{perl.config.cc} CFLAGS="-fPIC -g -Wall -O2"'],
     ## copy library files into place
-    [ 'mkdir -p %{.install.prefix}/lib/%{.runtime.kent_machtype}' ],
-    [ 'cp src/lib/%{.runtime.kent_machtype}/jkweb.a %{.install.prefix}/lib/%{.runtime.kent_machtype}/libjkweb.a' ],
-    [ 'cp src/lib/%{.runtime.kent_machtype}/jkweb.a %{.install.prefix}/lib/%{.runtime.kent_machtype}/jkweb.a' ],
-    [ 'cp src/htslib/libhts.a %{.install.prefix}/lib/%{.runtime.kent_machtype}/' ],
+    ['mkdir -p %{.install.prefix}/lib/%{.runtime.kent_machtype}'],
+    [
+      'cp src/lib/%{.runtime.kent_machtype}/jkweb.a %{.install.prefix}/lib/%{.runtime.kent_machtype}/libjkweb.a'
+    ],
+    [
+      'cp src/lib/%{.runtime.kent_machtype}/jkweb.a %{.install.prefix}/lib/%{.runtime.kent_machtype}/jkweb.a'
+    ],
+    [
+      'cp src/htslib/libhts.a %{.install.prefix}/lib/%{.runtime.kent_machtype}/'
+    ],
     ## copy include files
-    [ 'mkdir -p %{.install.prefix}/inc' ],
-    [ 'cp src/inc/*.h %{.install.prefix}/inc' ],
-    [ 'mkdir -p %{.install.prefix}/inc/htslib' ],
-    [ 'cp src/htslib/htslib/*.h %{.install.prefix}/inc/htslib/' ],
+    ['mkdir -p %{.install.prefix}/inc'],
+    ['cp src/inc/*.h %{.install.prefix}/inc'],
+    ['mkdir -p %{.install.prefix}/inc/htslib'],
+    ['cp src/htslib/htslib/*.h %{.install.prefix}/inc/htslib/'],
   ];
 
   meta->after_hook(
     gather_share => sub {
       my ($build) = @_;
-      $build->runtime_prop->{version} =
-        join '.', split //, $build->runtime_prop->{version};
-      $build->runtime_prop->{cflags} = join ' ',
-        '-Wno-format',
-        '-Wformat=0',
+      $build->runtime_prop->{version} = join '.', split //,
+        $build->runtime_prop->{version};
+      $build->runtime_prop->{cflags} = join ' ', '-Wno-format', '-Wformat=0',
         join('', '-DMACHTYPE_', $build->runtime_prop->{kent_machtype}),
-        join('', '-I', catfile $build->install_prop->{prefix}, 'inc'),
-        ;
+        join('', '-I', catfile $build->install_prop->{prefix}, 'inc'),;
       $build->runtime_prop->{libs} = join ' ',
-        join('', '-L', catfile $build->install_prop->{prefix}, 'lib', $build->runtime_prop->{kent_machtype}),
+        join('',
+        '-L',  catfile $build->install_prop->{prefix},
+        'lib', $build->runtime_prop->{kent_machtype}),
         '-ljkweb', '-lhts', '-lz', '-lssl', '-lpthread';
     },
   );
