@@ -1,0 +1,25 @@
+name = Alien-KentSrc
+author  = Roy Storey <kiwiroy@cpan.org>
+license = Perl_5
+copyright_holder = Roy Storey
+copyright_year   = 2018-2020
+version = 0.5
+
+[AlienBuild]
+
+[@Starter::Git]
+revision = 4
+Git::GatherDir.exclude_filename = Makefile.PL
+
+[GithubMeta]
+issues  = 1
+user    = kiwiroy
+repo    = alien-kentsrc
+
+[Prereqs::FromCPANfile]
+
+[Run::AfterBuild]
+; provide a friendly Makefile.PL in our repo
+;	very useful so Travis CI can use it without installing Dist::Zilla::*
+run = cp %d/Makefile.PL ./
+run = git status --porcelain | grep 'M Makefile.PL' && git commit -m 'Makefile.PL auto-updated by dist.ini' Makefile.PL && echo "# Makefile.PL auto-update" || echo "# Makefile.PL up to date"
